---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
local x: felt = 42;
--- Diagnostics ---
[02] Error: found 'local' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ local x: felt = 42;
   │ ──┬──  
   │   ╰──── found 'local' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
